Code cleanup based on SonarQube; Renamed User -> Developer, Developer -> DeveloperImpl, ProjectManger -> ProjectManagerImpl; Additional styling fixes and applied some naming changes for convenience